[package]
name = "rust-join-iterator-str-bench"
version = "0.1.0"
authors = ["Yusuke Tanaka <wing0920@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench"
harness = false

[dependencies]
itertools = "0.8.2"
lazy_static = "1.4.0"

[dev-dependencies]
bencher = "0.1.5"
